@@ -6,8 +6,8 @@ RatePAY GmbH - Magento Payment Module
 |Author | `Aarne Welschlau`
 |Prefix | `pi`
 |Shop Version | `CE` `<= 1.9.x`
-|Version | `2.4.5`
+|Version | `2.5.1`
 |Link | `http://www.ratepay.com`
 |Mail | `integration@ratepay.com`
-|Description | `compatibility with orders from AT`
+|Description | `permits shipping without invoicing. customer block only on PR`
 |Installation | `see separate installation manual`
