@@ -24,7 +24,7 @@
 
     <modules>
         <PayIntelligent_Ratepay>
-            <version>2.5.0</version>
+            <version>2.5.1</version>
         </PayIntelligent_Ratepay>
     </modules>
 
@@ -243,21 +243,12 @@
                 </observers>
             </sales_quote_payment_import_data_before>
 
-            <sales_order_invoice_register>
+            <sales_order_shipment_save_before>
                 <observers>
                     <sendRatepayDeliverCall>
                         <class>ratepay/observer</class>
                         <method>sendRatepayDeliverCall</method>
                     </sendRatepayDeliverCall>
-                </observers>
-            </sales_order_invoice_register>
-
-            <sales_order_shipment_save_before>
-                <observers>
-                    <isInvoiceCreated>
-                        <class>ratepay/observer</class>
-                        <method>isInvoiceCreated</method>
-                    </isInvoiceCreated>
                 </observers>
             </sales_order_shipment_save_before>
 
