@@ -1,4 +1,11 @@
 ***********************************************************
+**********| Version 2.5.1 - Released 2015-01-30 |**********
+***********************************************************
+
+* permits shipping without invoicing
+* customer block only on PR
+
+***********************************************************
 **********| Version 2.5.0 - Released 2014-12-08 |**********
 ***********************************************************
 
